--- a/javascript/first-steps/FS.html
+++ b/javascript/first-steps/FS.html
@@ -10,92 +10,24 @@
 <body>
   <button onclick="history.back()">ПОВЕРНУТИСЬ</button>
 
-  <p>
-    Підключення скриптів у HTML-документі:
-  </p>
-  <table>
-    <tr>
-      <td>
-        <p1>
-          1. З зовнішнього файлу:
-        </p1>
-        <p2>
-          <code>
-            < sсript src="/path/to/script.js">< /sсript>
-          </code>
-        </p2>
-          <br>
-    <p1>
-        2. Зберігання в середині файлу html:
-    </p1>
-      <p2>
-        <code>
-        < script>  ...  < /script>  
-        </code>
-      </p2>
-      <br>
-      <p1>
-        3. З зовнішнього сайту::
-    </p1>
-      <p2>
-        <code>
-          < script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.11/lodash.js">< /script>
-        </code>
-      </p2>
-    </td>
-  </tr>
-</table>
-
-
-
-
 <p>
-  Суворий режим “use strict”:
-</p>
-<table>
-  <tr>
-    <td>
-      <p1>
-        Для активації суворого режиму в JavaScript, ви можете використовувати директиву "use strict" або 'use strict'. Це дозволяє вам вказати, що ви хочете використовувати строгий режим для вашого коду. Суворий режим допомагає уникнути деяких помилок і небажаних поведінок у JavaScript.
-      </p1>
-    </br>
-      <p2>
-        "use strict";
-      </br> &nbsp;  &nbsp;  
-        // цей код працюватиме у сучасному режимі
-      </br> &nbsp;  &nbsp;  
-        ...
-      </p2>
-        <br>
-  </td>
-</tr>
-</table>
-
-
-<p>
-  Змінні:
-</p>
-<table>
-  <tr>
-    <td>
-
-<p1>
-Створення:
-</p1>
-<p2>
-<br>&nbsp;  &nbsp;  
-let x = 5; // змінна x має значення 5 (може бути змінена)
-<br>&nbsp;  &nbsp;  
-var x = 5; // змінна x має значення 5 (може бути змінена)
-<br>&nbsp;  &nbsp;  
-const x = 5; // константа x має значення 5 (не може бути змінена)
-<br>
-</p2><br>
-<p1>
-Виклик:
-</p1>
-<p2> 
-  <br>&nbsp;  &nbsp;  alert(x); // виведе 5
+Підключення скриптів у HTML-документі:</br>
+1. З зовнішнього файлу на сервері нашого сайту:</br>
+< script src="/path/to/script.js">< /script></br>
+2. Зберігання в середині файлу html:</br>
+< script>  ...  < /script></br>
+3. З зовнішнього сайту:</br>
+< script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.11/lodash.js">< /script></br></br>
+Суворий режим "use strict":</br>
+Для активації суворого режиму в JavaScript, ви можете використовувати директиву "use strict" або 'use strict'. Це дозволяє вам вказати, що ви хочете використовувати строгий режим для вашого коду. Суворий режим допомагає уникнути деяких помилок і небажаних поведінок у JavaScript.</br>
+"use strict"; // далі код нижче працюватиме у сучасному режимі</br></br>
+Змінні:</br>
+Створення:</br>
+let x = 5; // змінна x має значення 5 (може бути змінена)</br> 
+var x = 5; // змінна x має значення 5 (може бути змінена)</br> 
+const x = 5; // константа x має значення 5 (не може бути змінена)</br></br> 
+Виклик:</br> 
+//alert(x); // виведе 5</br> 
 </p2><br><br>
 <p1>
 Перезапис значення змінної:
@@ -140,7 +72,21 @@ alert(x); // виведе 5;
 
 
 
-
+  <p>Зміст:</p>
+    <table>
+        <tr>
+          <td>
+            <p1>1.<a href="first-steps/primitive_transformation.html"> Перетворення примітивів.
+            </p1>
+          </td>
+        </tr>
+        <tr>
+          <td> 
+            <p1>2.<a href="first-steps/mathematical_operations.html"> Математичні операції.
+             </p1>
+          </td>
+        </tr>
+      </table>
 
 
 
