--- a/javascript/first-steps/mathematical_operations.html
+++ b/javascript/first-steps/mathematical_operations.html
@@ -9,37 +9,58 @@
 </head>
 <body>
   <button onclick="history.back()">ПОВЕРНУТИСЬ</button>
-
-
-
 <p>
 Термінологія:</br>
-Операнд - те до чого застосовується оператор(аргумент). // наприклад у виразі 1+1, операндами будуть 1 та 1</br>  
-Оператор(аргумент) - дія, у вигляді символу (+, -, *, / і т.д.), яка застосовується до операнда. // наприклад у виразі 1+1, операндом буде унарний + </br>
-Оператори є двох видів:</br>
+&nbsp;Операнд - те до чого застосовується оператор(аргумент). // наприклад у виразі 1+1, операндами будуть 1 та 1</br>  
+&nbsp;Оператор(аргумент) - дія, у вигляді символу (+, -, *, / і т.д.), яка застосовується до операнда. // наприклад у виразі 1+1, операндом буде унарний + </br>
+&nbsp;Оператори є двох видів:</br>
 Унарні - застосовується до одного операнда. // У виразі let x = 1; x = -x; alert( x ); // -1, було застосоване унарне заперечення/</br>
-Бінарний - оператор застосовується до двох операндів. // У виразі 1 + 1, бінарний оператор "+" застосовується до двох операндів 1 та 1.</br></br>
+&nbsp;Бінарний - оператор застосовується до двох операндів. // У виразі 1 + 1, бінарний оператор "+" застосовується до двох операндів 1 та 1.</br></br></br>
 Математичні оператори в JavaScript:</br>
-Додавання +,</br>
-Віднімання -,</br>
-Множення *,</br>
-Ділення /,</br>
-Остача від ділення %,</br>
-Піднесення до степеня **.</br></br>
-
-Додавання +</br></br>
-
-Віднімання -</br></br>
-
-Множення *</br></br>
-
-Ділення /</br></br>
-
-Остача від ділення %</br></br>
-  Результатом a % b є остача цілочислового ділення a на b</br>
-    alert( 5 % 2 ); // 1 - остача від ділення 5 на 2</br>
-    alert( 8 % 3 ); // 2 - остача від ділення 8 на 3</br>
-    alert( 8 % 4 ); // 0 - остача від ділення 8 на 4</br></br>
+&nbsp;Бінарний + (додавання),</br>
+&nbsp;Унарний + (перетворення на number),</br>
+&nbsp;Віднімання -,</br>
+&nbsp;Множення *,</br>
+&nbsp;Ділення /,</br>
+&nbsp;Остача від ділення %,</br>
+&nbsp;Піднесення до степеня **.</br></br></br>
+Бінарний + (додавання)</br>
+&nbsp;Бінарний плюс об'єднує рядки:</br>
+&nbsp;&nbsp;("1" + "2") //об'єднає рядки та поверне "12"</br>
+&nbsp;&nbsp;( '1' + 2 ); //  повертає "12" - перший string перетворює подальші значення (в даному випадку number) в string </br>
+&nbsp;&nbsp;( 2 + '1' ); //  повертає "21" перший number об'єднується з наступним string та повертає string</br>
+&nbsp;&nbsp;(2 + 2 + '1' ); //  повертає "41" - оператори виконуються один за одним. Перший + додає два number, тому він поверне 4; а наступний оператор + вже додасть (об’єднає) попередній результат із string. У підсумку ми отримаємо рядок.</br>
+&nbsp;&nbsp;('1' + 2 + 2); //  повертає "122" - перший операнд – string, тому компілятор також опрацьовує інші два операнди як string. Операнд 2 приєднується (конкатенується) до '1', тому в результаті буде '1' + 2 = "12", а потім — "12" + 2 = "122".</br>
+&nbsp;Лише бінарний + працює з рядками так. Інші арифметичні оператори працюють тільки з числами й завжди перетворюють свої операнди на числа.</br>
+Приклади----------------</br>
+let apples = "2";</br>
+let oranges = "3";</br></br>
+alert( apples + oranges ); // "23", бінарний плюс об’єднує значення змінних, які є рядками</br>
+------------------------</br></br></br>
+Унарний + (перетворення на number)</br>
+&nbsp;Альтернатива функції Number(...)</br>
+&nbsp;&nbsp;let x = 1; alert( +x ); // повертає 1 - унарний + не впливає на числа.</br>
+&nbsp;&nbsp;let y = -2; alert( +y ); // повертає -2  - унарний + не впливає на числа.</br>
+&nbsp;&nbsp;( +true ); // повертає 1 - Перетворює нечислові значення</br>
+&nbsp;&nbsp;( +"" );   // повертає 0 - Перетворює нечислові значення</br>
+Приклади----------------</br>
+let apples = "2";</br>
+let oranges = "3";</br></br>
+// обидва значення перетворюються на числа перед застосуванням бінарного плюса</br>
+alert( +apples + +oranges ); // 5</br></br>
+// довший варіант</br>
+// alert( Number(apples) + Number(oranges) ); // 5</br>
+------------------------</br></br></br>
+Віднімання -</br>
+( 6 - '2' ); // 4, '2' перетворюється на число (не так, як бінарний +)</br></br></br>
+Множення *</br></br></br>
+Ділення /</br>
+( '6' / '2' ); // 3, обидва операнди перетворюються на числа (не так, як бінарний +)</br></br></br>
+Остача від ділення %</br>
+&nbsp;Результатом a % b є остача цілочислового ділення a на b</br>
+&nbsp;&nbsp;alert( 5 % 2 ); // 1 - остача від ділення 5 на 2</br>
+&nbsp;&nbsp;alert( 8 % 3 ); // 2 - остача від ділення 8 на 3</br>
+&nbsp;&nbsp;alert( 8 % 4 ); // 0 - остача від ділення 8 на 4</br></br></br>
 Піднесення до степеня **.</br>
 &nbsp;Піднесення до степеня a ** b множить a саме на себе b разів. </br>
   &nbsp;&nbsp;alert( 2 ** 2 ); // 2² = 4</br>
@@ -50,7 +71,22 @@
   &nbsp;&nbsp;alert( 4 ** (1/2) ); // 2 (степінь 1/2 — це теж саме, що квадратний корінь)</br>
   &nbsp;&nbsp;alert( 8 ** (1/3) ); // 2 (степінь 1/3 — це теж саме, що кубічний корінь)</br>
 </br></br>
-
+Пріоритет обчислення оператора:</br>
+Дужки перевизначають будь-який пріоритет, тому, якщо ми не задоволені типовим пріоритетом, ми можемо використовувати дужки, щоби змінити його. Наприклад: (1 + 2) * 2</br></br>
+Пріоритет	Ім’я	Знак</br>
+…	…	…</br>
+14	унарний плюс	+</br>
+14	унарний мінус	-</br>
+13	піднесення до степеня	**</br>
+12	множення	*</br>
+12	ділення	/</br>
+11	додавання	+</br>
+11	віднімання	-</br>
+…	…	…</br>
+2	присвоєння	=</br>
+…	…	…</br>
+Як ми бачимо, “унарний плюс” має пріоритет 14, що вище за 11 – пріоритет “додавання” (бінарний плюс). Саме тому, у виразі "+apples + +oranges", унарні плюси виконуються перед додаванням (бінарним плюсом).</br></br></br>
+Присвоєння = </br>
 
 
 
