--- a/javascript/first-steps/FS.html
+++ b/javascript/first-steps/FS.html
@@ -76,13 +76,13 @@ alert(x); // виведе 5;
     <table>
         <tr>
           <td>
-            <p1>1.<a href="first-steps/primitive_transformation.html"> Перетворення примітивів.
+            <p1>1.<a href="primitive_transformation.html"> Перетворення примітивів.
             </p1>
           </td>
         </tr>
         <tr>
           <td> 
-            <p1>2.<a href="first-steps/mathematical_operations.html"> Математичні операції.
+            <p1>2.<a href="mathematical_operations.html"> Математичні операції.
              </p1>
           </td>
         </tr>
