--- a/javascript/first-steps/mathematical_operations.html
+++ b/javascript/first-steps/mathematical_operations.html
@@ -35,7 +35,7 @@
 Приклади----------------</br>
 let apples = "2";</br>
 let oranges = "3";</br></br>
-alert( apples + oranges ); // "23", бінарний плюс об’єднує значення змінних, які є рядками</br>
+alert( apples + oranges ); // "23", бінарний плюс об'єднує значення змінних, які є рядками</br>
 ------------------------</br></br></br>
 Унарний + (перетворення на number)</br>
 &nbsp;Альтернатива функції Number(...)</br>
@@ -87,6 +87,123 @@ alert( +apples + +oranges ); // 5</br></br>
 …	…	…</br>
 Як ми бачимо, “унарний плюс” має пріоритет 14, що вище за 11 – пріоритет “додавання” (бінарний плюс). Саме тому, у виразі "+apples + +oranges", унарні плюси виконуються перед додаванням (бінарним плюсом).</br></br></br>
 Присвоєння = </br>
+Має найнижчий пріоритет, тому він у виразах виконується останнім зі збереженням результату. Може також використовуватись у складних виразах - let c = 3 - (a = b + 1); з яких можна окремо отримати результати а та с.</br>
+Знак = використовується для присвоєння значення. У виразі let name = "Ruslan"; змінній name оператор = присвоює рядок "Ruslan"</br></br>
+Ланцюгові присвоєння</br>
+a = b = c = 2 + 2; // виконується з права на ліво. Спочатку обчислюється найправіший вираз 2 + 2 (де + має вищий пріоритет), а потім результат присвоюється змінним ліворуч: c, b та a. Зрештою всі змінні мають спільне значення.</br></br>
+Оператор “модифікувати та присвоїти”</br>
+Застосовується коли потрібно застосувати оператор до змінної й зберегти новий результат у ту ж саму змінну.</br>
+Приклади----------------</br>
+let n = 2;</br>
+n = n + 5;</br>
+n = n * 2;</br>
+------------------------</br>
+або</br>
+Приклади----------------</br>
+let n = 2;</br>
+n += 5; // тепер n = 7 (те ж саме, що n = n + 5)</br>
+n *= 2; // тепер n = 14 (те ж саме, що n = n * 2)</br></br>
+alert( n ); // 14</br>
+------------------------</br>
+або</br>
+Приклади----------------</br>
+let n = 2;</br></br>
+n *= 3 + 5; // права частина обчислюється першою, так само як і n *= 8</br></br>
+alert( n ); // 16</br>
+------------------------</br></br>
+Інкремент/декремент</br>
+Збільшення або зменшення на одиницю. Можуть застосовуватися лише до змінних. Спроба використати їх із значенням, як от 5++, призведе до помилки.</br>
+Інкремент ++ збільшує змінну на 1:</br>
+Приклади----------------</br>
+let counter = 2;</br>
+counter++;        // працює так само, як counter = counter + 1, але запис коротше</br>
+alert( counter ); // 3</br>
+------------------------</br></br>
+Декремент -- зменшує змінну на 1:</br>
+Приклади----------------
+let counter = 2;</br>
+counter--;        // працює так само, як counter = counter - 1, але запис коротше</br>
+alert( counter ); // 1</br>
+------------------------</br></br>
+Оператори ++ та -- можуть розташовуватися до або після змінної.</br>
+Коли оператор йде за змінною, він у “постфіксній формі”: counter++.</br>
+“Префіксна форма” – це коли оператор йде попереду змінної: ++counter.</br>
+Префіксна форма повертає нове значення, тоді як постфіксна форма повертає старе значення (до збільшення/зменшення).</br>
+Приклад:</br>
+Приклади----------------</br>
+let counter = 1;</br>
+let a = ++counter; // (*)</br></br>
+alert(a); // 2</br>
+------------------------</br>
+У рядку (*), префіксна форма ++counter збільшує counter та повертає нове значення, 2. Отже, alert показує 2. Якщо ми хочемо збільшити значення та негайно використати результат оператора, нам потрібна префіксна форма.</br>
+Тепер скористаємося постфіксною формою:</br>
+Приклади----------------</br>
+let counter = 1;</br>
+let a = counter++; // (*) змінили ++counter на counter++</br></br>
+alert(a); // 1</br>
+------------------------</br>
+У рядку (*), постфіксна форма counter++ також збільшує counter, але повертає старе значення (до інкременту). Отже, alert показує 1.Якщо ми хочемо збільшити значення, але використати його попереднє значення, нам потрібна постфіксна форма.</br></br>
+Оператори ++/-- також можуть використовуватися всередині виразів. Їхній пріоритет вищий за більшість інших арифметичних операцій.</br>
+Наприклад:</br>
+Приклади----------------</br>
+let counter = 1;</br>
+alert( 2 * ++counter ); // 4</br>
+------------------------</br>
+Порівняйте з:</br>
+Приклади----------------</br>
+let counter = 1;</br>
+alert( 2 * counter++ ); // 2, тому що counter++ повертає "старе" значення</br>
+------------------------
+Хоча з технічного погляду це допустимо, такий запис робить код менш читабельним. Коли один рядок робить кілька речей – це не добре.</br>
+Під час читання коду швидке “вертикальне” сканування оком може легко пропустити щось подібне до counter++, і не буде очевидним, що змінна була збільшена.</br>
+Ми рекомендуємо стиль “одна лінія – одна дія”:</br>
+Приклади----------------</br>
+let counter = 1;</br>
+alert( 2 * counter );</br>
+counter++;</br>
+------------------------</br>
+Приклади----------------</br>
+let a = 1; // 2
+let b = 1; // 2
+let c = ++a; // 2
+let d = b++; // 1
+------------------------</br></br>
+Кома</br>
+Оператор “кома” (,) незвичайний і застосовується дуже рідко. Іноді цей оператор використовують для написання коротшого коду, тому нам потрібно знати його, щоби розуміти, що відбувається.</br>
+Оператор кома дає змогу обчислити кілька виразів, розділивши їх комою , . Кожен із них обчислюється, але повертається тільки результат останнього.</br>
+Приклади----------------</br>
+let a = (1 + 2, 3 + 4);</br></br>
+alert( a ); // 7 (результат обчислення 3 + 4)</br>
+------------------------</br>
+Тут обчислюється перший вираз 1 + 2 і його результат викидається. Потім обчислюється 3 + 4 і повертається як результат.</br>
+Кома має дуже низький пріоритет</br>
+Зверніть увагу, що оператор “кома” має дуже низький пріоритет, нижчий за =, тому дужки є важливими в наведеному вище прикладі.</br>
+Без дужок, у виразі a = 1 + 2, 3 + 4 спочатку обчислюються оператори +, підсумовуючи числа у a = 3, 7; потім оператор присвоєння = присвоює a = 3, а решта (число 7 після коми) ігнорується. Це як записати вираз (a = 1 + 2), 3 + 4.</br>
+Чому нам потрібен оператор, що викидає все, окрім останнього виразу?</br>
+Іноді його використовують у складніших конструкціях, щоби помістити кілька дій в один рядок.</br>
+Приклади----------------</br>
+// три операції в одному рядку</br>
+for (a = 1, b = 3, c = a * b; a < 10; a++) {</br>
+ ...</br>
+}</br>
+Такі трюки використовуються в багатьох фреймворках JavaScript. Саме тому ми їх згадуємо. Але зазвичай вони не покращують читабельність коду, тому ми маємо добре подумати перед їх використанням.</br>
+</br></br>
+Приклади----------------</br>
+"" + 1 + 0 = "10" // Додавання пустого рядка "" + 1 перетворює число 1 на рядок: "" + 1 = "1"; далі ми маємо "1" + 0, де застосовується те ж саме правило.</br>
+"" - 1 + 0 = -1 // Віднімання - (як і більшість математичних операцій) працює тільки з числами, воно перетворює порожній рядок "" на 0.</br>
+true + false = 1</br>
+6 / "3" = 2</br>
+"2" * "3" = 6</br>
+4 + 5 + "px" = "9px"</br>
+"$" + 4 + 5 = "$45"</br>
+"4" - 2 = 2</br>
+"4px" - 2 = NaN</br>
+"  -9  " + 5 = "  -9  5" // Додавання з рядком додає число 5 до рядка.</br>
+"  -9  " - 5 = -14 // Віднімання завжди перетворює на числа, тому рядок " -9 " перетвориться на число -9 (ігноруючи пробіли навколо нього). null стає 0 після числового перетворення.</br>
+null + 1 = 1 // (5)</br>
+undefined + 1 = NaN // undefined стає NaN після числового перетворення.</br>
+" \t \n" - 2 = -2 // Символи пробілів по краях рядка ігноруються під час перетворення в число. Тому рядок, який містить лише символи \t, \n або «звичайні» пробіли, прирівнюється до пустого рядка і стає 0 після числового перетворення.</br>
+------------------------</br></br>
 
 
 
@@ -104,24 +221,24 @@ alert( +apples + +oranges ); // 5</br></br>
     const btnUp = {
       el: document.querySelector('.btn-up'),
       show() {
-        // удалим у кнопки класс btn-up_hide
+        // видалимо клас btn-up_hide
         this.el.classList.remove('btn-up_hide');
       },
       hide() {
-        // добавим к кнопке класс btn-up_hide
+        // добавимо до кнопки клас btn-up_hide
         this.el.classList.add('btn-up_hide');
       },
       addEventListener() {
-        // при прокрутке содержимого страницы
+        // при прокрутка змісту сторінки
         window.addEventListener('scroll', () => {
-          // определяем величину прокрутки
+          // встановлюємо величину прокрутки
           const scrollY = window.scrollY || document.documentElement.scrollTop;
-          // если страница прокручена больше чем на 400px, то делаем кнопку видимой, иначе скрываем
+          // якщо сторінка прокручена більша чим на 400px, то робимо кнопку видимою, або приховуємо
           scrollY > 400 ? this.show() : this.hide();
         });
-        // при нажатии на кнопку .btn-up
+        // при натисканні на кнопку .btn-up
         document.querySelector('.btn-up').onclick = () => {
-          // переместим в начало страницы
+          // переміщаємо на початок сторінки
           window.scrollTo({
             top: 0,
             left: 0,
