--- a/javascript/first-steps/FS.html
+++ b/javascript/first-steps/FS.html
@@ -86,6 +86,12 @@ alert(x); // виведе 5;
              </p1>
           </td>
         </tr>
+                <tr>
+          <td> 
+            <p1>2.<a href="comparison_operators.html"> Оператори порівняння.
+             </p1>
+          </td>
+        </tr>
       </table>
 
 
