--- a/javascript/first-steps/FS.html
+++ b/javascript/first-steps/FS.html
@@ -13,11 +13,11 @@
 <p>
 Підключення скриптів у HTML-документі:</br>
 1. З зовнішнього файлу на сервері нашого сайту:</br>
-< script src="/path/to/script.js">< /script></br>
+<Фscript src="/path/to/script.js"><Ф/script></br>
 2. Зберігання в середині файлу html:</br>
-< script>  ...  < /script></br>
+<Фscript>  ...  <Ф/script></br>
 3. З зовнішнього сайту:</br>
-< script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.11/lodash.js">< /script></br></br>
+<Фscript src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.11/lodash.js"><Ф/script></br></br>
 Суворий режим "use strict":</br>
 Для активації суворого режиму в JavaScript, ви можете використовувати директиву "use strict" або 'use strict'. Це дозволяє вам вказати, що ви хочете використовувати строгий режим для вашого коду. Суворий режим допомагає уникнути деяких помилок і небажаних поведінок у JavaScript.</br>
 "use strict"; // далі код нижче працюватиме у сучасному режимі</br></br>
@@ -59,12 +59,12 @@ alert(x); // виведе 5;
 </p2>
 <br><br>
 <p1> Правила назви змінної:<br>
-Змінна може мати будь-яке ім'я, яке починається з літери, знака підкреслення (_) або знака долара ($). Далі можуть бути літери, цифри, знак підкреслення (_) або знак долара ($). Імена змінних чутливі до регістру. При створенні використовується верблюжий регістр наприклад: myVariableName. Для створення const використовуються верхній регстр наприклад MY_VARIABLE_NAME, COLOR_RED і тд. Змінна не може починатись з цифри. Змінна не може мати пробіли, дефіси, крапки, коми, дужки та інші символи. Змінна не може мати зарезервовані слова JavaScript (наприклад: let, var, const, if, else, for, while тощо). <br><br>
+Змінна може мати будь-яке ім'я, яке починається з літери, знака підкреслення (_) або знака долара ($). Далі можуть бути літери, цифри, знак підкреслення (_) або знак долара ($). Імена змінних чутливі до регістру. При створенні використовується верблюжий регістр наприклад: myVariableName. Для створення const використовуються верхній регістр наприклад MY_VARIABLE_NAME, COLOR_RED і тд. Змінна не може починатись з цифри. Змінна не може мати пробіли, дефіси, крапки, коми, дужки та інші символи. Змінна не може мати зарезервовані слова JavaScript (наприклад: let, var, const, if, else, for, while тощо). <br><br>
     Правила придумування імен:<br>
 * Використовуйте імена, які легко прочитати, як-от userName або shoppingCart.<br>
 * Уникайте використання абревіатур або коротких імен, таких як a, b та c, окрім тих випадків, коли ви точно знаєте, що так потрібно.<br>
 * Робіть імена максимально описовими і лаконічними. Наприклад, такі імена погані: data і value. Такі імена нічого не говорять. Їх можна використовувати лише тоді, коли з контексту очевидно, на які дані або значення посилається змінна.<br>
-* Погоджуйте з вашою командою (та з самим собою), які терміни будуть використовуватися у проєкті. Якщо відвідувач сайту називається “user”, тоді ми маємо давати відповідні імена іншим пов’язаним змінним: currentUser або newUser, замість currentVisitor або newManInTown.
+* Погоджуйте з вашою командою (та з самим собою), які терміни будуть використовуватися у проєкті. Якщо відвідувач сайту називається “user”, тоді ми маємо давати відповідні імена іншим пов'язаним змінним: currentUser або newUser, замість currentVisitor або newManInTown.
 </p1>
 </td>
 </tr>
