--- a/javascript/first-steps/comparison_operators.html
+++ b/javascript/first-steps/comparison_operators.html
@@ -15,9 +15,46 @@
 &nbsp;Більше/менше або дорівнює: a >= b, a <= b.</br>
 &nbsp;Дорівнює: a == b. Зверніть увагу, для порівняння потрібно використовувати два знаки рівності ==. Один знак рівності a = b означав би присвоєння.</br>
 &nbsp;Не дорівнює:   a != b.</br></br>
+Результатам порівняння буде true або false.</br>
+Приклади----------------</br>
+&nbsp;&nbsp;( 2 > 1 );  // true </br>
+&nbsp;&nbsp;( 2 == 1 ); // false </br>
+&nbsp;&nbsp;( 2 != 1 ); // true</br>
+------------------------</br></br>
+Результат порівняння можна присвоїти змінній, як і будь-яке інше значення:</br>
+Приклади----------------</br>
+let result = 5 > 4; // присвоїти результат порівняння змінній result</br>
+alert( result ); // true</br>
+------------------------</br></br></br>
+Порівняння рядків</br>
+Для порівняння рядків застосовується лексичний (посимвольний порядок) та кодування Unicode, а не справжній алфавіт:</br>
+Приклади----------------</br>
+( 'Я' > 'А' ); // true</br>
+( 'Соки' > 'Сода' ); // true</br>
+( 'Комар' > 'Кома' ); // true</br>
+------------------------</br>
+1 Порівнюються перші символи обох рядків.</br>
+2 Якщо перший символ першого рядка більший (менший) за перший символ другого рядка, то перший рядок більший (менший) за другий. Порівняння закінчено.</br>
+3 В іншому випадку, якщо перші символи обох рядків рівні, то таким самим чином порівнюються вже другі символи рядків.</br>
+4 Порівняння продовжується до того часу, доки не закінчиться один з рядків.</br>
+5 Якщо два рядки закінчуються одночасно, то вони рівні. Інакше, довший рядок вважатиметься більшим.
+В прикладах вище, порівняння 'Я' > 'А' завершиться на першому кроці.</br>
+Проте друге порівняння слів 'Соки' і 'Сода' буде виконуватися посимвольно:</br>
+1 С дорівнює С.</br>
+2 о дорівнює о.</br>
+3 к більше ніж д. На цьому кроці порівнювання закінчується. Перший рядок більший.</br>
+В кодуванні Unicode має значення регістр символів. Велика буква "А" не рівна маленькій "а". Але яка з них більше? Маленька буква "а". Чому? Тому що маленькі букви мають більший код у внутрішній таблиці кодування, яку використовує JavaScript (Unicode). </br></br></br>
+Порівняння різних типів</br>
+При порівнянні різних типів значення перетворюються в числа:</br>
+( '2' > 1 ); // true, рядок '2' стає числом 2</br>
+( '01' == 1 ); // true, рядок '01' стає числом 1</br>
+( true == 1 ); // true - true стає 1</br>
+( false == 0 ); // true - false стає 0.</br></br>
 
-
-
+Boolean перетворення 0:</br>
+let a = 0; alert( Boolean(a) ); // false. 0 число перетворюється в false.</br>
+let b = "0"; alert( Boolean(b) ); // true. 0 типу string перетворюється в true.</br>
+alert(a == b); // true! але при не строгому порівнянні. 0 рядок перетворюється в число і починає дорівнювати числу 0 </br>
 
 
 </p>
