--- a/javascript/first-steps/FS.html
+++ b/javascript/first-steps/FS.html
@@ -76,20 +76,17 @@ alert(x); // виведе 5;
     <table>
         <tr>
           <td>
-            <p1>1.<a href="primitive_transformation.html"> Перетворення примітивів.
-            </p1>
+            <p1>1.<a href="primitive_transformation.html"> Перетворення примітивів.</p1>
           </td>
         </tr>
         <tr>
           <td> 
-            <p1>2.<a href="mathematical_operations.html"> Математичні операції.
-             </p1>
+            <p1>2.<a href="mathematical_operations.html"> Математичні операції.</p1>
           </td>
         </tr>
-                <tr>
+        <tr>
           <td> 
-            <p1>2.<a href="comparison_operators.html"> Оператори порівняння.
-             </p1>
+            <p1>2.<a href="comparison_operators.html"> Оператори порівняння.</p1>
           </td>
         </tr>
       </table>
