--- a/javascript/first-steps/FS.html
+++ b/javascript/first-steps/FS.html
@@ -89,6 +89,11 @@ alert(x); // виведе 5;
             <p1>2.<a href="comparison_operators.html"> Оператори порівняння.</p1>
           </td>
         </tr>
+        <tr>
+          <td> 
+            <p1>2.<a href="if_and_question_mark.html"> Умовні розгалуження: if, '?'.</p1>
+          </td>
+        </tr>
       </table>
 
 
