--- a/javascript/first-steps/comparison_operators.html
+++ b/javascript/first-steps/comparison_operators.html
@@ -103,6 +103,16 @@ Boolean перетворення 0:</br>
 &nbsp;Значення null і undefined рівні == один одному і не рівні будь-якому іншому значенню.</br>
 &nbsp;Будьте обережні, використовуючи оператори порівняння на зразок > чи < зі змінними, які можуть приймати значення null/undefined. Хорошою ідеєю буде зробити окрему перевірку на null/undefined для таких значень. Порівняння з null і undefined</br>
 
+Приклади----------------</br>
+&nbsp;5 > 4 → true // Очевидно, 5 більше за 4. true.</br>
+&nbsp;"ананас" > "яблуко" → false // Посимвольне порівняння, тому false. "а" менше за "я".</br>
+&nbsp;"2" > "12" → true // Знову посимвольне порівняння. Перший символ рядка "2" більший за перший символ другого рядка — "1".</br>
+&nbsp;undefined == null → true // Спеціальний випадок. Значення null і undefined рівні лише один одному під час нестрогого порівняння.</br>
+&nbsp;undefined === null → false // Строге порівняння різних типів, тому false.</br>
+&nbsp;null == "\n0\n" → false // Аналогічно, як в кроці (4), null дорівнює лише undefined.</br>
+&nbsp;null === +"\n0\n" → false // Строге порівняння різних типів.</br>
+------------------------</br>
+
 </p>
 </br> &nbsp; &nbsp; &nbsp;
 
