--- a/javascript/first-steps/FS.html
+++ b/javascript/first-steps/FS.html
@@ -94,6 +94,11 @@ alert(x); // виведе 5;
             <p1>2.<a href="if_and_question_mark.html"> Умовні розгалуження: if, '?'.</p1>
           </td>
         </tr>
+                <tr>
+          <td> 
+            <p1>2.<a href="Logical_operators.html"> Логічні оператори.</p1>
+          </td>
+        </tr>
       </table>
 
 
